--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vue-spinner": "^1.0.3",
         "vuex": "^3.1.1"
     }
 }
