--- a/.env
+++ b/.env
@@ -27,9 +27,9 @@ REDIS_PORT=6379
 
 
 
-PUSHER_APP_ID=826797
-PUSHER_APP_KEY=5aa924f7e58b4d93ab77
-PUSHER_APP_SECRET=c1ab1bebc27229d4ec57
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=us2
 
 
